Fix blank Leaflet map on mobile by adding resize hook and reliable CDN

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1531,6 +1531,7 @@ textarea.form-input {
   }
 
   .booking-map {
+    width: 100%;
     height: 50vh;
     min-height: 400px;
   }
